--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/provider-upload-cloudinary": "4.15.0",
     "@strapi/strapi": "4.15.0",
-    "pg": "8.11.3"
+    "pg": "8.11.3",
+    "strapi-plugin-multi-select": "^1.2.2"
   },
   "author": {
     "name": "A Strapi developer"
