--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@strapi/provider-upload-cloudinary": "4.15.4",
     "@strapi/strapi": "4.15.4",
     "pg": "8.11.3",
-    "strapi-plugin-multi-select": "^1.2.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
+    "strapi-plugin-multi-select": "^1.2.2",
+    "styled-components": "^5.2.1"
   },
   "author": {
     "name": "A Strapi developer"
